Updated  input type username day4.html

--- a/day4.html
+++ b/day4.html
@@ -17,6 +17,7 @@
            <p id="red">it is dog</p> 
            <h class="pink">it is green</h>
            <p>it is blue</p>
+            <input type="text" placeholder="username"/>
         </body>
         
 
